make sure nav stays hidden on mobile devices where viewport size changes

--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -6,7 +6,7 @@
 .main-nav {
     @include scut-fill();
     position: fixed;
-    transform: translateY(-100%);
+    transform: translateY(-120%);
     z-index: 99;
     // @extend %tp-container;
 
